fixed Meateater layout bugs

--- a/UI/components/ CaseAdditionalContent/styles/meateater.scss
+++ b/UI/components/ CaseAdditionalContent/styles/meateater.scss
@@ -7,8 +7,29 @@
     }
   }
 
-  .listItem span {
-    font-size: 16px;
+  .listContainer {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .listItem {
+    @include fontSize(16px, 150%);
+
+    margin-bottom: 8px;
+    padding-left: 20px;
+    position: relative;
     color: $gray400;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: $gray900;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+    }
   }
 }
