--- a/UI/components/ChallengesAndSolutions/styles/meateater.scss
+++ b/UI/components/ChallengesAndSolutions/styles/meateater.scss
@@ -19,7 +19,8 @@
       height: 580px;
 
       &-1,
-      &-3 {
+      &-3,
+      &-5 {
         margin-right: -280px;
 
         &::after {
